--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                            <input id="sum" name="name" type="number" class=" col-md-6 m-sm-2 mt-sm-1 form-control" required>
                        </div>
                        <div class="row  mt-sm-3 justify-content-center">
-                        <label for="rate" class="col-md-5 form-label" style="font-weight: bold;">Rate-of-Interest</label>
+                        <label for="rate" class="col-md-5 form-label" style="font-weight: bold;">Percentage(rate)</label>
                         <input id="rate" name="name" type="number" class=" col-md-6 m-sm-2 mt-sm-1 m-xs-2 form-control" required>
                       </div>
                       <div class="row mt-sm-3 justify-content-center">
-                        <label for="time" class="col-md-5 form-label" style="font-weight: bold;">Time</label>
+                        <label for="time" class="col-md-5 form-label" style="font-weight: bold;">Years(time)</label>
                         <input id="time" name="name" type="number" class=" col-md-6 m-sm-2  mt-sm-1 m-xs-2 form-control" required>
                       </div>
                       <div class="row mt-5 mt-sm-1 justify-content-center">
