--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
                         </div>
                        <div class="row  mt-sm-3 justify-content-center">
                            <label for="sum" class="col-md-5 form-label justify-self-toend" style="font-weight:bold;">Principal-sum</label>
-                           <input id="sum" name="name" type="number" class=" col-md-6 m-sm-2 mt-sm-1 form-control" required>
+                           <input id="sum" name="name" type="number" class=" col-md-6 m-sm-2 mt-sm-1 form-control" autocomplete="off" required>
                        </div>
                        <div class="row  mt-sm-3 justify-content-center">
                         <label for="rate" class="col-md-5 form-label" style="font-weight: bold;">Percentage(rate)</label>
-                        <input id="rate" name="name" type="number" class=" col-md-6 m-sm-2 mt-sm-1 m-xs-2 form-control" required>
+                        <input id="rate" name="name" type="number" class=" col-md-6 m-sm-2 mt-sm-1 m-xs-2 form-control" autocomplete="off" required>
                       </div>
                       <div class="row mt-sm-3 justify-content-center">
                         <label for="time" class="col-md-5 form-label" style="font-weight: bold;">Years(time)</label>
-                        <input id="time" name="name" type="number" class=" col-md-6 m-sm-2  mt-sm-1 m-xs-2 form-control" required>
+                        <input id="time" name="name" type="number" class=" col-md-6 m-sm-2  mt-sm-1 m-xs-2 form-control" autocomplete="off" required>
                       </div>
                       <div class="row mt-5 mt-sm-1 justify-content-center">
                         
